--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/pg": "^8.15.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
